syntax = "proto3";

option go_package = "./;grpc";

package postpb;

service PostService {
  rpc ListPostsByUser (ListPostsRequest) returns (ListPostsResponse);
}

message ListPostsRequest {
  string user_id = 1;
}

message Post {
  string id = 1;
  string content = 2;
  string author = 3;
  string timestamp = 4;
}

message ListPostsResponse {
  repeated Post posts = 1;
}
